@@ -44,19 +44,23 @@ mpn_mod_1s_4p_cps (mp_limb_t cps[7], mp_limb_t b)
   b <<= cnt;
   invert_limb (bi, b);
 
-  B1modb = -b * ((bi >> (GMP_LIMB_BITS-cnt)) | (CNST_LIMB(1) << cnt));
-  ASSERT (B1modb <= b);		/* NB: not fully reduced mod b */
-  udiv_rnd_preinv (B2modb, B1modb, b, bi);
-  udiv_rnd_preinv (B3modb, B2modb, b, bi);
-  udiv_rnd_preinv (B4modb, B3modb, b, bi);
-  udiv_rnd_preinv (B5modb, B4modb, b, bi);
-
   cps[0] = bi;
   cps[1] = cnt;
+
+  B1modb = -b * ((bi >> (GMP_LIMB_BITS-cnt)) | (CNST_LIMB(1) << cnt));
+  ASSERT (B1modb <= b);		/* NB: not fully reduced mod b */
   cps[2] = B1modb >> cnt;
+
+  udiv_rnd_preinv (B2modb, B1modb, b, bi);
   cps[3] = B2modb >> cnt;
+
+  udiv_rnd_preinv (B3modb, B2modb, b, bi);
   cps[4] = B3modb >> cnt;
+
+  udiv_rnd_preinv (B4modb, B3modb, b, bi);
   cps[5] = B4modb >> cnt;
+
+  udiv_rnd_preinv (B5modb, B4modb, b, bi);
   cps[6] = B5modb >> cnt;
 
 #if WANT_ASSERT
